Adding all files

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </div>
 <!--Enquieries End-->
 <!--Form Start-->
-<div class="row justify-content-center my-5 ">
+<div class="row justify-content-center ">
     <div class="col-10 border">
         <form>
             <div class="mb-3 row my-5">
@@ -153,6 +153,7 @@
 </div>
 
 <!--Contact Start-->
+<hr>
 <div class="row justify-content-center bg-dark border-white" id="contactUs">
     <div class="col-10 border-white">
       <p class="display-4 text-center text-weight-bold text-white" >Contact Us<p>
