--- a/index.html
+++ b/index.html
@@ -164,9 +164,12 @@
 <!--Contact End-->
 <!--Google Map Start-->
 <div class="row justify-content-center bg-dark ">
-    <div class="col-4 col-md-10 my-5 text-center map-responsive">
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1658.0448481892531!2d151.12017632593592!3d-33.78418181585919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12a60a6daa8a45%3A0xce5419946a3dec7a!2s1%20Lyonpark%20Rd%2C%20Macquarie%20Park%20NSW%202113!5e0!3m2!1sen!2sau!4v1621487564194!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div class="col-8 col-md-10 my-5  ">
+        <div>
+            <iframe src="https://www.google.com/maps/embed? pb=!1m18!1m12!1m3!1d15288.360926048195!2d51.52175762195133!3d25.282422800605804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45c534ffdce87f%3A0x1cfa88cf812b4032!2sQatar!5e0!3m2!1sen!2s!4v1546430525796" width="100%" height="440" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+
+        </div>    
+    
     </div>
 </div>
 <!--Google map End-->
